RESOLVED FIXED268782
Fix media/video-ended-does-not-hold-sleep-assertion.htmliOS layout test crash
https://bugs.webkit.org/show_bug.cgi?id=268782
Summary Fix media/video-ended-does-not-hold-sleep-assertion.htmliOS layout test crash
Dana Estra
Reported 2024-02-05 14:37:43 PST
Fix media/video-ended-does-not-hold-sleep-assertion.htmliOS layout test crash
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-05 14:37:57 PST
Dana Estra
Comment 2 2024-02-05 14:47:43 PST
EWS
Comment 3 2024-02-06 10:55:01 PST
Committed 274158@main (f8e706aae35a): <https://commits.webkit.org/274158@main> Reviewed commits have been landed. Closing PR #23888 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.