Fix media/video-ended-does-not-hold-sleep-assertion.html iOS layout test crash https://bugs.webkit.org/show_bug.cgi?id=268782 rdar://122342671

Reviewed by Eric Carlson.

Before, destruction logic for PlaybackSessionInterfaceAVKit/LMK was split up between
Their own destructors and the base class PlayBackSessionInterfaceIOS destructor. This
Patch moves all the logic to the derived classes to avoid a crash that was caused
By a virtual function being called indirectly from the base class's destructor.

* Source/WebCore/platform/ios/PlaybackSessionInterfaceAVKit.h:
* Source/WebCore/platform/ios/PlaybackSessionInterfaceAVKit.mm:
(WebCore::PlaybackSessionInterfaceAVKit::invalidate):
* Source/WebCore/platform/ios/PlaybackSessionInterfaceIOS.h:
* Source/WebCore/platform/ios/PlaybackSessionInterfaceIOS.mm:
(WebCore::PlaybackSessionInterfaceIOS::~PlaybackSessionInterfaceIOS):
(WebCore::PlaybackSessionInterfaceIOS::invalidate): Deleted.
* Source/WebCore/platform/ios/PlaybackSessionInterfaceLMK.h:
* Source/WebCore/platform/ios/PlaybackSessionInterfaceLMK.mm:
(WebCore::PlaybackSessionInterfaceLMK::~PlaybackSessionInterfaceLMK):
(WebCore::PlaybackSessionInterfaceLMK::invalidate):

Canonical link: https://commits.webkit.org/274158@main