Source/WebCore/platform/ios/PlaybackSessionInterfaceAVKit.h
@@ -54,7 +54,7 @@ public:
     void wirelessVideoPlaybackDisabledChanged(bool) override;
     void mutedChanged(bool) override;
     void volumeChanged(double) override;
-    void invalidate();
+    void invalidate() override;
 
 #if !RELEASE_LOG_DISABLED
     const char* logClassName() const override;
